# nerine-tweaks

./: .dockerignore  .env.development  .env.example  .gitignore  Dockerfile  Dockerfile.deployer  README.md  clean-dev.sh  dev-cache-sqlx.sh  docker-compose.challs.yml  docker-compose.dev-prod.yml  docker-compose.dev.yml  docker-compose.edge.yml  docker-compose.yml  init-env.sh  install-challs.sh  install-platform.sh
.sqlx/: query-470c5c019f2f06b1d147748fdf5be1ddac6d9e830d463d30529b9c74e2f54fb9.json  query-80d743b3f750d3977c770d069d49f15dc348a1250b4acde60d658f0ae1936907.json  query-ab633016dd7108bb72d62082c138f4968822556990b43dc12d3641031d9aec94.json  query-f4246a1b0190682be05db07f8ce0a6a0d554f3b195c03e348c3a07ba28ae65a6.json
caddyrouter/: Dockerfile
crates/api/: Cargo.toml
crates/api/src/: attachments.rs  config.rs  email.rs  error.rs  main.rs
crates/api/src/admin/: attachments.rs  auth.rs  challenges.rs  mod.rs
crates/api/src/api/: attachments.rs  auth.rs  challenges.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/deployer-common/: Cargo.toml
crates/deployer-common/src/: challenge.rs  lib.rs  uploader.rs
crates/deployer-server/: Cargo.toml
crates/deployer-server/src/: api.rs  config.rs  deploy.rs  main.rs
examples/challenges/file-check/: challenge.toml  flag.txt
examples/challenges/flag-as-a-service/: challenge.toml
examples/challenges/flag-as-a-service/chall/: Dockerfile  index.html
examples/challenges/sanity-check/: challenge.toml
examples/conf/: daemon.json
examples/extras/actions/hosted/: build.yml
examples/extras/actions/selfhosted/: build.yml
examples/extras/self-hosted-github-runner/: .env.example  README.md  docker-compose.yml
scripts/: generate_caddy_config.py  generate_env_with_secrets.py  generate_simple_caddyfile_config.py
