[package]
name = "nerine-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = { version = "0.19.0", features = ["ssl", "buildkit"] }
clap = { version = "4.5.40", features = ["derive"] }
deployer-common = { path = "../deployer-common", package = "nerine-deployer-common" }
dialoguer = "0.11.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.27"
rayon = "1.10.0"
reqwest = { version = "0.12.20", default-features = false, features = ["cookies", "http2", "json", "rustls-tls"] }
rustyline = "16.0.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
walkdir = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
google-cloud-storage = { version = "0.24.0", default-features = false, features = ["auth", "rustls-tls"] }
