[package]
name = "nerine-deployer-common"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = { version = "0.19.0", features = ["ssl"] }
eyre = "0.6.12"
flate2 = "1.1.2"
futures-util = "0.3.31"
google-cloud-storage = { version = "0.24.0", default-features = false, features = ["auth", "rustls-tls"] }
log = { version = "0.4.27", features = ["std"] }
reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "rustls-tls",
    "multipart",
    "stream",
    "cookies",
    "http2"
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
tar = "0.4.44"
tempdir = "0.3.7"
tokio = { version = "1.45.1", features = ["fs", "rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["io"] }
toml = "0.8.23"
