[package]
name = "nerine-deployer-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
bollard = { version = "0.19.0", features = ["ssl", "buildkit"] }
chrono = { version = "0.4.40", features = ["serde"] }
ctrlc = { version = "3.4.7", features = ["termination"] }
deployer-common = { path = "../deployer-common", package = "nerine-deployer-common" }
dotenvy = "0.15.7"
envconfig = "0.11.0"
eyre = "0.6.12"
fast32 = "1.0.3"
glob = "0.3.2"
log = { version = "0.4.27", features = ["std"] }
nanoid = "0.4.0"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "json", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
toml = "0.8.23"
